# ModularCMAES

./: .clang-format  .gitignore  .gitlab-ci.yml  .prospector.yaml  .readthedocs.yml  CMakeLists.txt  LICENSE  MANIFEST.in  P2_answers.ipynb  README.md  benchmark_1.2.sh  benchmark_1.sh  benchmark_2.sh  logger_test.py  main.py  parameters.pkl  project.ipynb  projection.ipynb  pyproject.toml  repelling.py  requirements.txt  run.py  run.sh  run_ModCMA_100.sh  run_ModCMA_20.sh  scratch.cpp  setup.py  someres.md  svm.ipynb  temp.ipynb  test.sh  testrun.py  x.html
ccmaes/: .configurablecmaes.py.swp  .parameters.py.swp  .utils.py.swp  __init__.py  __main__.py  asktellcmaes.py  cannonicalcmaes.py  configurablecmaes.py  modularcmaes.py  optimizer.py  parameters.py  population.py  sampling.py  utils.py
docs/: requirements.txt
include/: acmaes.hpp  bounds.hpp  c_maes.hpp  center_placement.hpp  common.hpp  es.hpp  evaluator.h  integer.hpp  mapping.hpp  matrix_adaptation.hpp  modules.hpp  mutation.hpp  parameters.hpp  pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp  population.hpp  repelling.hpp  restart.hpp  restart_criteria.hpp  restart_strategy.hpp  sampling.hpp  selection.hpp  settings.hpp  stats.hpp  to_string.hpp  weights.hpp
modcma/: __init__.py  __main__.py  asktellcmaes.py  modularcmaes.py  parameters.py  population.py  sampling.py  surrogate.py  surrogate_model.py  surrogate_strategy.py  typing_utils.py  utils.py
outcmaes/: ._outauglagfeas.logdata  ._outauglagfeas3.logdata  ._outauglagg2.logdata  ._outauglagg3.logdata  ._outauglaglam.logdata  ._outauglaglam3.logdata  (+2 more)
(+264 files in other folders)
